--- a/AngularShop/src/app/product-page/product-page.component.html
+++ b/AngularShop/src/app/product-page/product-page.component.html
@@ -48,7 +48,7 @@
 
                     <tr>
                         <th scope="row">{{'TAX'|translate}}</th>
-                        <td>{{product?.taxcode}} %</td>
+                        <td>{{product?.tax}} %</td>
                     </tr>
 
                     <tr *ngIf="logged">
