--- a/AngularShop/src/app/profil/profil-edit/profil-edit.component.html
+++ b/AngularShop/src/app/profil/profil-edit/profil-edit.component.html
@@ -40,7 +40,7 @@
               <!-- Phone -->
               <div class="mb-3">
                 <label for="phoneInput" class="form-label">Phone Number</label>
-                <input type="tel" class="form-control" id="phoneInput" placeholder="+1234567890" formControlName="phoneInput">
+                <input type="tel" class="form-control" id="phoneInput" placeholder="+1234567890" formControlName="phoneInput" required>
               </div>
             
               <hr class="my-4">
