--- a/AngularShop/src/app/checkout/checkout.component.html
+++ b/AngularShop/src/app/checkout/checkout.component.html
@@ -134,7 +134,7 @@
                 </div>
             
                 <!-- Submit Button -->
-                <button type="submit" #submitBT class="btn btn-dark border border-light">Submit</button>
+                <button type="submit" [disabled]="submitButtonDisabled" #submitBT class="btn btn-dark border border-light">Submit</button>
               
               </form>
 
