--- a/AngularShop/src/app/profil/order-history/order-history.component.html
+++ b/AngularShop/src/app/profil/order-history/order-history.component.html
@@ -10,12 +10,12 @@
         <div *ngFor="let order of orders | paginate: { itemsPerPage: 12, currentPage: page }" class="accordion-item" >
             <h2 class="accordion-header" id="headingOne">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                    [attr.data-bs-target]="'#'+order.orderId" aria-expanded="false" [attr.aria-controls]="'#'+order.orderId">
+                    [attr.data-bs-target]="'#order_'+order.orderId" aria-expanded="false" [attr.aria-controls]="'#'+order.orderId">
                    {{"ORDER NUMBER" | translate}} {{order.orderId}} | {{"CREATION DATE" | translate}} {{convertTimestampToDate(order.created)}} | {{"DELIVERY DATE" | translate}} {{convertTimestampToDate(order.orderDate)}}
                 </button>
             </h2>
 
-            <div [id]="order.orderId" class="accordion-collapse collapse" aria-labelledby="headingOne"
+            <div id="order_{{order.orderId}}" class="accordion-collapse collapse" aria-labelledby="headingOne"
                 data-bs-parent="#orderHistoryAccordion">
                 <button class="btn btn-secondary my-3 mx-2" (click)="loadItemsToCart(order)">{{"RELOAD ITEMS" | translate}}</button>
                 <div class="accordion-body">
@@ -29,8 +29,8 @@
                         </thead>
                         <tbody>
                             <tr *ngFor="let item of order.orderDetails">
-                                <th scope="row"><a [routerLink]="['/product/']+'item.product!.productId'"> {{item.product.productId}} </a></th>
-                                <td> <a [routerLink]="['/product/']+'item.product!.productId'">{{item.product.productName}}</a></td>
+                                <th scope="row"><a [routerLink]="['/product/'+item.product!.productId]"> {{item.product.productId}} </a></th>
+                                <td> <a [routerLink]="['/product/'+item.product!.productId]">{{item.product.productName}}</a></td>
                                 <td> <a>{{item.quantity}}</a></td>
                             </tr>
                         </tbody>
