--- a/AngularShop/src/app/login/login.component.html
+++ b/AngularShop/src/app/login/login.component.html
@@ -20,14 +20,14 @@
             <div class="tab-pane fade show active" id="nav-login" role="tabpanel" aria-labelledby="nav-login-tab">
               <br>
                 <button type="submit" class="btn btn-secondary"
-                  (click)="login()"> {{"LOGIN WITH A-CHAU-ID"|translate}}</button>
+                  (click)="login()"> {{"LOGIN"|translate}}</button>
         
             </div>
             <!--Register section-->
             <div class="tab-pane fade" id="nav-register" role="tabpanel" aria-labelledby="nav-register-tab">
               <br>
               <button type="submit" class="btn btn-secondary"
-                (click)="register()">{{"REGISTER TO A-CHAU-ID"|translate}}</button>
+                (click)="register()">{{"REGISTER"|translate}}</button>
       
             </div>
           </div>
