--- a/AngularShop/src/app/home/home.component.html
+++ b/AngularShop/src/app/home/home.component.html
@@ -30,7 +30,7 @@
                             <div class="carousel-inner">
 
                                 <div class="carousel-item active">
-                                    <img style="width: 100%;" src="Frontimage.jpg"
+                                    <img style="width: 100%;" src="assets/Frontimage.jpg"
                                         class="d-block" alt="...">
                                 </div>
                            
