--- a/AngularShop/src/app/navbar/navbar.component.html
+++ b/AngularShop/src/app/navbar/navbar.component.html
@@ -70,7 +70,7 @@ l4 205 36 105 c20 58 99 238 176 400 192 403 262 584 326 835 85 336 100 603
                 <li *ngIf="isLogged" class="nav-item">
                     <a class="nav-link" [routerLinkActive]="['active']" routerLink="/profil">
                         <i class="bi bi-person-circle"></i>
-                        {{'PROFIL' | translate}}</a>
+                        {{'PROFILE' | translate}}</a>
                 </li>
 
                 <li *ngIf="isAdmin" class="nav-item">
