--- a/AngularShop/src/app/profil/order-history/order-history.component.html
+++ b/AngularShop/src/app/profil/order-history/order-history.component.html
@@ -7,7 +7,7 @@
     <div class="accordion" id="orderHistoryAccordion">
 
 
-        <div *ngFor="let order of orders | paginate: { itemsPerPage: 12, currentPage: page, totalItems:maxItems }" class="accordion-item" >
+        <div *ngFor="let order of orders | paginate: { itemsPerPage: maxOrdersPerPage, currentPage: page, totalItems:maxItems }" class="accordion-item" >
             <h2 class="accordion-header" id="headingOne">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     [attr.data-bs-target]="'#order_'+order.orderId" aria-expanded="false" [attr.aria-controls]="'#'+order.orderId">
