--- a/AngularShop/src/app/profile/main-profile/main-profile.component.html
+++ b/AngularShop/src/app/profile/main-profile/main-profile.component.html
@@ -5,8 +5,8 @@
             <div class="col-md-3 col-lg-2 d-md-block sidebar collapse">
                 <div class="list-group">
 
-                    <a class="list-group-item list-group-item-action" routerLink="/profil/edit">{{'PROFILE EDIT' | translate}}</a>
-                    <a class="list-group-item list-group-item-action" routerLink="/profil/history">{{'ORDER HISTORY' | translate}}</a>
+                    <a class="list-group-item list-group-item-action" routerLink="/profile/edit" routerLinkActive="active">{{'PROFILE EDIT' | translate}}</a>
+                    <a class="list-group-item list-group-item-action" routerLink="/profile/history" routerLinkActive="active">{{'ORDER HISTORY' | translate}}</a>
                     <a type="button" [target]="'_blank'" [href]="[profilpage]"
                         class="list-group-item list-group-item-action">
                         {{'PROFILE SETTINGS' | translate}}
