--- a/AngularShop/src/app/admin-page/admin-page.component.html
+++ b/AngularShop/src/app/admin-page/admin-page.component.html
@@ -2,7 +2,8 @@
 <!--Popup section-->
 <app-custom-modal #CustomModalComponent> </app-custom-modal>
 <!--Popup section ends-->
-<script type="text/comment">
+
+
 <div class="container">
   <!-- Left-side menu bar -->
   <div class="row mt-4">
@@ -23,41 +24,37 @@
       <div class="accordion" id="orderHistoryAccordion">
 
 
-        <div *ngFor="let order of orders | paginate: { itemsPerPage: 12, currentPage: page }" class="accordion-item">
+        <div *ngFor="let order of orders | paginate: { itemsPerPage: maxOrdersPerPage, currentPage: page, totalItems:maxItems }" class="accordion-item" >
           <h2 class="accordion-header" id="headingOne">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-              [attr.data-bs-target]="'#'+order.orderId" aria-expanded="false" [attr.aria-controls]="'#'+order.orderId">
-              {{"ORDER NUMBER" | translate}} {{order.orderId}} | {{"CREATION DATE" | translate}}
-              {{convertTimestampToDate(order.created)}} | {{"DELIVERY DATE" | translate}}
-              {{convertTimestampToDate(order.orderDate)}}
-            </button>
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  [attr.data-bs-target]="'#order_'+order.orderId" aria-expanded="false" [attr.aria-controls]="'#'+order.orderId">
+                 {{"ORDER NUMBER" | translate}} {{order.orderId}} | {{"CREATION DATE" | translate}} {{convertTimestampToDate(order.created)}} | {{"DELIVERY DATE" | translate}} {{convertTimestampToDate(order.orderDate)}}
+              </button>
           </h2>
 
-          <div [id]="order.orderId" class="accordion-collapse collapse" aria-labelledby="headingOne"
-            data-bs-parent="#orderHistoryAccordion">
-            <button class="btn btn-secondary my-3 mx-2" (click)="loadItemsToCart(order)">{{"RELOAD ITEMS" |
-              translate}}</button>
-            <div class="accordion-body">
-              <table class="table table-hover">
-                <thead>
-                  <tr>
-                    <th scope="col">{{"PRODUCT ID" | translate}}</th>
-                    <th scope="col">{{"PRODUCT NAME" | translate}}</th>
-                    <th scope="col">{{"QUANTITY" | translate}}</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr *ngFor="let item of order.orderDetails">
-                    <th scope="row"><a [routerLink]="['/product/']+'item.product!.productId'"> {{item.product.productId}} </a>
-                    </th>
-                    <td> <a [routerLink]="['/product/']+'item.product!.productId'">{{item.product.productName}}</a></td>
-                    <td> <a>{{item.quantity}}</a></td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
+          <div id="order_{{order.orderId}}" class="accordion-collapse collapse" aria-labelledby="headingOne"
+              data-bs-parent="#orderHistoryAccordion">
+              <button class="btn btn-secondary my-3 mx-2" (click)="loadItemsToCart(order)">{{"RELOAD ITEMS" | translate}}</button>
+              <div class="accordion-body">
+                  <table class="table table-hover">
+                      <thead>
+                          <tr>
+                              <th scope="col">{{"PRODUCT ID" | translate}}</th>
+                              <th scope="col">{{"PRODUCT NAME" | translate}}</th>
+                              <th scope="col">{{"QUANTITY" | translate}}</th>
+                          </tr>
+                      </thead>
+                      <tbody>
+                          <tr *ngFor="let item of order.orderDetails">
+                              <th scope="row"><a [routerLink]="['/product/'+item.product!.productId]"> {{item.product.productId}} </a></th>
+                              <td> <a [routerLink]="['/product/'+item.product!.productId]">{{item.product.productName}}</a></td>
+                              <td> <a>{{item.quantity}}</a></td>
+                          </tr>
+                      </tbody>
+                  </table>
+              </div>
           </div>
-        </div>
+      </div>
 
         <pagination-controls (pageChange)="page = $event" (click)="scroll(title)" [nextLabel]="getTranslation('NEXT')"
           [previousLabel]="getTranslation('PREVIOUS')"></pagination-controls>
@@ -67,5 +64,3 @@
   </div>
 </div>
 <br>
-
-</script>
