--- a/AngularShop/src/app/checkout/checkout.component.html
+++ b/AngularShop/src/app/checkout/checkout.component.html
@@ -136,7 +136,7 @@
                 </div>
             
                 <!-- Submit Button -->
-                <button type="submit" [disabled]="submitButtonDisabled" #submitBT class="btn btn-dark border border-light">Submit</button>
+                <button type="submit" [disabled]="submitButtonDisabled" #submitBT class="btn btn-dark border border-light">{{'SUBMIT' | translate}}</button>
               
               </form>
 
